新增项目依赖

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==2.2.9
+Django==2.2.10
 Jinja2==2.10.1
 pyecharts==1.5.1
 paramiko==2.6.0
@@ -9,3 +9,4 @@ django-simpleui==3.2
 mysqlclient==1.4.4
 IPy==1.0
 django-inline-actions==2.3.0
+django-crispy-forms==1.9.0
