--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        apt-get install libmysqlclient-dev python3-dev
-        pip install -r requirements.txt
+        sudo apt-get install libmysqlclient-dev python3-dev
+        sudo pip install -r requirements.txt
     - name: Run Tests
       run: |
         python manage.py test
