--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -23,9 +23,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         sudo apt-get install libmysqlclient-dev python3-dev
-        sudo pip install -r requirements.txt
+        sudo pip3 install -r requirements.txt
     - name: Run Tests
       run: |
         python manage.py test
