--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python3 -m pip install --upgrade pip
-        sudo apt-get install libmysqlclient-dev python3-dev
+        sudo apt-get install libmysqlclient-dev python3-dev python3-setuptools
         sudo pip3 install -r requirements.txt
     - name: Run Tests
       run: |
