--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,9 +23,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        apt-get install libmysqlclient-dev python3-dev
-        pip install -r requirements.txt
+        python3 -m pip install --upgrade pip
+        sudo apt-get install libmysqlclient-dev python3-dev python3-setuptools
+        sudo pip3 install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python3 manage.py test
