--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -28,4 +28,6 @@ jobs:
         sudo pip3 install -r requirements.txt
     - name: Run Tests
       run: |
-        python3 manage.py test
+        python3 -m pip list
+        /usr/local/bin/python3 -m pip list
+        whereis python3
